Fix bug dialog-backdrop disposition and not showing infosheet

--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -345,11 +345,6 @@ dialog {
         }
     }
 }
-::backdrop {
-    position: relative;
-    background-color: transparent;
-    z-index: 2400;
-}
 
 @mixin bodyModal {
     overflow: hidden;
